fix download bug

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -148,6 +148,10 @@
             </intent-filter>
         </receiver>
 
+        <meta-data
+            android:name="${UMENG_CHANNEL_NAME}"
+            android:value="default_channel">
+        </meta-data>
     </application>
 
 </manifest>
