--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,10 +4,13 @@ apply plugin: 'realm-android'
 apply plugin: 'android-apt'
 
 def commandValue = "default value ~"
+def assembleTime() {
+    return new Date().format("yyyy-MM-dd", TimeZone.getTimeZone("UTC"))
+}
 
 android {
     signingConfigs {
-        debugSigning {
+        debugSign {
             keyAlias 'shixinzhang'
             keyPassword 'zsx250'
             storeFile file('/Users/zhangshixin/AndroidStudioProjects/ShixinDemo2/app/debugkeystore.jks')
@@ -16,6 +19,7 @@ android {
     }
     compileSdkVersion 24
     buildToolsVersion '25.0.2'
+
     defaultConfig {
         applicationId "net.sxkeji.shixinandroiddemo2"
         minSdkVersion 16
@@ -23,6 +27,7 @@ android {
         versionCode 1
         versionName "1.0"
 
+        signingConfig signingConfigs.debugSign
         //enable multi dex
         multiDexEnabled true
 //        必须加，否则64位手机无法加载so文件
@@ -39,31 +44,60 @@ android {
 //        buildConfigField("String", "value", commandValue)
         print("value=" + commandValue)
     }
+
     buildTypes {
         release {
+            applicationIdSuffix ".release"
             minifyEnabled false
+            zipAlignEnabled true
+            shrinkResources false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            resValue("string", "app_name", "SxRelease")
+            debuggable true
         }
         debug {
+            applicationIdSuffix ".debug"
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             debuggable true
+            resValue("string", "app_name", "SxDebug")
         }
 
-        shixin {
+        product {
 
         }
     }
 
+    android.applicationVariants.all {
+        variant ->
+            variant.outputs.each { output ->
+                def outputFile = output.outputFile
+                if (outputFile != null && outputFile.name.endsWith(".apk")) {
+                    def apkName = "shixin_${flavorName}_${variant.buildType.name}_${defaultConfig.versionName}_${assembleTime()}.apk"
+                    output.outputFile = new File(outputFile.parent, apkName)
+                }
+            }
+    }
+
     productFlavors {
-        dev {
+        _360 {
 //            minSdkVersion 21
+        }
+
+        wandoujia {}
+
+        productFlavors.all { flavor ->
+            flavor.manifestPlaceholders = [UMENG_CHANNEL_NAME : name]
         }
     }
 
     packagingOptions {
         exclude 'com.android.support:support-annotations:25.1.0'
     }
+}
+
+task clean(type: Delete) {
+    delete rootProject.buildDir
 }
 
 //去除重复的依赖
@@ -111,7 +145,7 @@ dependencies {
     compile 'com.github.anrwatchdog:anrwatchdog:1.3.0'
     //    compile 'com.dodola:rocoo:1.1'
     //    compile fileTree(include: ['*.jar'], dir: 'libs')
-    //    testCompile 'junit:junit:4.12'
+    compile 'junit:junit:4.12'
     //    compile 'com.android.support.test.espresso:espresso-core:2.2.2', {
     //        exclude group: 'com.android.support', module: 'support-annotations'
     //    }
