--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,7 +36,9 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity
+            android:name=".MainActivity"
+            android:configChanges="screenSize|orientation|keyboardHidden|locale">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -53,7 +55,8 @@
 
         <activity
             android:name=".activity.ChangeThemeActivity"
-            android:label="@string/change_theme"/>
+            android:label="@string/change_theme"
+            android:launchMode="standard"/>
 
         <activity
             android:name=".activity.DIYView1Activity"
@@ -112,6 +115,28 @@
             android:label="@string/anr_test"/>
 
         <activity android:name=".activity.DownloadTestActivity"/>
+
+        <activity
+            android:name=".activity.launchmode.StandardActivity"
+            android:label="standard"
+            android:launchMode="standard"/>
+
+        <activity
+            android:name=".activity.launchmode.SingleTopActivity"
+            android:label="singleTop"
+            android:launchMode="singleTop"/>
+
+        <activity
+            android:name=".activity.launchmode.SingleTaskActivity"
+            android:label="singleTask"
+            android:launchMode="singleTask"
+            android:taskAffinity="top.shixinzhang.task2"/>
+
+        <activity
+            android:name=".activity.launchmode.SingleInstanceActivity"
+            android:label="singleInstance"
+            android:launchMode="singleInstance"
+            android:taskAffinity="top.shixinzhang.task2"/>
 
         <meta-data
             android:name="com.amap.api.v2.apikey"
