--- a/app/build.gradle
+++ b/app/build.gradle
@@ -124,7 +124,9 @@ repositories {
 
 final COMPAT_VERSION = "24.2.0"
 dependencies {
-    compile 'com.android.support:appcompat-v7:24.2.0'
+    compile ('com.android.support:appcompat-v7:24.2.0') {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    }
     compile "com.android.support:recyclerview-v7:$COMPAT_VERSION"
     compile "com.android.support:cardview-v7:$COMPAT_VERSION"
     compile "com.android.support:support-annotations:$COMPAT_VERSION"
@@ -136,8 +138,8 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.squareup.retrofit2:converter-gson:2.0.0-beta3'
-//    compile 'io.reactivex:rxjava:1.0.14'
-//    compile 'io.reactivex:rxandroid:1.0.1'
+    //    compile 'io.reactivex:rxjava:1.0.14'
+    //    compile 'io.reactivex:rxandroid:1.0.1'
     compile 'com.github.ismaeltoe:flowlayout:1.0'
     compile 'com.google.code.gson:gson:2.4'
     compile 'com.alibaba:fastjson:1.1.46.android'
@@ -152,4 +154,5 @@ dependencies {
     //    }
     compile project(path: ':WeexSDK')
     compile project(':sxframework')
+    compile project(':sxdebugkit')
 }
