--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,8 @@
     <uses-permission android:name="android.permission.BLUETOOTH"/>
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
 
-    <uses-permission android:name="android.permission.INSTALL_PACKAGES"/>
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
+    <!--<uses-permission android:name="android.permission.INSTALL_PACKAGES"/>-->
 
     <application
         android:name=".SxApplication"
@@ -40,10 +41,10 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
-            android:configChanges="screenSize|orientation|keyboardHidden|locale">
+            android:configChanges="screenSize|orientation|keyboardHidden|locale"
+            android:launchMode="singleTask">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
-
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
@@ -53,6 +54,7 @@
             android:theme="@style/AppThemeNoActionBar"/>
         <activity
             android:name=".activity.SearchBrandActivity"
+            android:launchMode="singleTop"
             android:theme="@style/AppThemeNoActionBar"/>
 
         <activity
@@ -62,11 +64,13 @@
 
         <activity
             android:name=".activity.DIYView1Activity"
-            android:label="@string/diy_demo1"/>
+            android:label="@string/diy_demo1"
+            android:launchMode="singleTop"/>
 
         <activity
             android:name=".activity.HybridDemo1Activity"
-            android:label="@string/hybrid_demo1"/>
+            android:label="@string/hybrid_demo1"
+            android:launchMode="singleTop"/>
         <activity
             android:name=".activity.HybridDemo2Activity"
             android:label="@string/hybrid_demo2"/>
@@ -140,7 +144,7 @@
                 <category android:name="android.intent.category.DEFAULT"/>
                 <category android:name="top.shixinzhang.category.test"/>
 
-                <data android:mimeType="text/plain" />
+                <data android:mimeType="text/plain"/>
             </intent-filter>
             <intent-filter>
                 <action android:name="android.intent.action.VIEW"/>
@@ -160,6 +164,11 @@
             android:launchMode="singleInstance"
             android:taskAffinity="top.shixinzhang.task2"/>
 
+        <activity
+            android:name=".activity.FloatTrackerActivity"
+            android:label="@string/float_tracker"
+            android:launchMode="singleTop"/>
+
         <meta-data
             android:name="com.amap.api.v2.apikey"
             android:value="012a484e2b4f84412fbea6736ec3658f">
@@ -177,7 +186,7 @@
             android:label="@string/service_daemon"/>
 
         <service
-            android:name=".service.AutoClickService"
+            android:name=".service.AssistantService"
             android:label="@string/app_name"
             android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE">
             <intent-filter>
