--- a/app/build.gradle
+++ b/app/build.gradle
@@ -95,6 +95,11 @@ android {
         exclude 'com.android.support:support-annotations:25.1.0'
         exclude 'META-INF/rxjava.properties'
     }
+
+    dexOptions {
+//        incremental true  //被遗弃了
+//        javaMaxHeapSize "4g"
+    }
 }
 
 task clean(type: Delete) {
