--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -174,6 +174,12 @@
             android:label="@string/aidl_test"
             android:launchMode="singleTop"/>
 
+
+        <activity
+            android:name=".activity.http.OkHttp3TestActivity"
+            android:label="@string/okhttp_test"
+            android:launchMode="singleTop"/>
+
         <meta-data
             android:name="com.amap.api.v2.apikey"
             android:value="012a484e2b4f84412fbea6736ec3658f">
