--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,14 +48,23 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
         <activity
             android:name=".MainActivity"
             android:configChanges="screenSize|orientation|keyboardHidden|locale"
+            android:label="@string/android_evolution"
             android:launchMode="singleTask">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
+        </activity>
+
+        <activity
+            android:name=".TestMainActivity"
+            android:configChanges="screenSize|orientation|keyboardHidden|locale"
+            android:launchMode="singleTop">
         </activity>
         <activity
             android:name=".activity.SearchActivity"
