--- a/app/build.gradle
+++ b/app/build.gradle
@@ -163,7 +163,8 @@ dependencies {
     //    compile 'com.android.support.test.espresso:espresso-core:2.2.2', {
     //        exclude group: 'com.android.support', module: 'support-annotations'
     //    }
-    compile 'com.qiniu:qiniu-android-sdk:7.2.+'
+//    compile 'com.qiniu:qiniu-android-sdk:7.2.+'
+    compile 'org.greenrobot:eventbus:3.0.0'
     compile project(path: ':WeexSDK')
     compile project(':sxframework')
     compile project(':sxdebugkit')
