--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':sxframework', ':WeexSDK', ':sxdebugkit', ':service'
+include ':app', ':sxframework', ':WeexSDK', ':sxdebugkit', ':service', ':ioc', ':ioc-processor'
