add nlog, not finish yet

--- a/sxdebugkit/src/main/AndroidManifest.xml
+++ b/sxdebugkit/src/main/AndroidManifest.xml
@@ -5,6 +5,11 @@
         android:label="@string/app_name"
         >
 
+        <activity
+            android:name=".nlog.LogDetailActivity"
+            android:label="@string/log_detail"
+            android:launchMode="singleTop"/>
+
     </application>
 
 </manifest>
