crawler almost finish

--- a/crawler/build.gradle
+++ b/crawler/build.gradle
@@ -23,32 +23,26 @@ android {
         }
     }
 
-    android.applicationVariants.all {
-        variant ->
-            variant.outputs.each { output ->
-                def outputFile = output.outputFile
-                if (outputFile != null && outputFile.name.endsWith(".apk")) {
-                    def apkName = "data_auto_${variant.buildType.name}_${defaultConfig.versionName}_${assembleTime()}.apk"
-                    output.outputFile = new File(outputFile.parent, apkName)
-                }
-            }
-    }
+//    android.applicationVariants.all {
+//        variant ->
+//            variant.outputs.each { output ->
+//                def outputFile = output.outputFile
+//                if (outputFile != null && outputFile.name.endsWith(".apk")) {
+//                    def apkName = "data_auto_${variant.buildType.name}_${defaultConfig.versionName}_${assembleTime()}.apk"
+//                    output.outputFile = new File(outputFile.parent, apkName)
+//                }
+//            }
+//    }
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
     compile 'com.android.support:appcompat-v7:25.3.1'
-    testCompile 'junit:junit:4.12'
-
     compile 'com.jakewharton:butterknife:8.0.1'
     apt 'com.jakewharton:butterknife-compiler:8.0.1'
 
     compile 'com.squareup.okhttp3:okhttp:3.4.1'
-
-//    compile 'com.yuntu.android:yuntu_framework:1.0.33-SNAPSHOT'
+    compile 'com.github.markzhai:blockcanary-android:1.5.0'
 }
 
 beforeEvaluate {
