--- a/crawler/src/main/AndroidManifest.xml
+++ b/crawler/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
           package="top.shixinzhang.datacrawler">
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.ACCESS_SUPERUSER"/>
 
     <application
         android:allowBackup="true"
