--- a/build.gradle
+++ b/build.gradle
@@ -3,13 +3,13 @@
 buildscript {
     repositories {
         jcenter()
+        mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.1.0'
-        classpath 'com.dodola:rocoofix:1.2.6'
+        classpath 'com.android.tools.build:gradle:2.2.2'
+//        classpath 'com.dodola:rocoofix:1.2.6'
         classpath "io.realm:realm-gradle-plugin:2.0.2"
         classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
-
         classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7'
         classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
         // NOTE: Do not place your application dependencies here; they belong
@@ -20,6 +20,10 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        maven { url "http://repo2.maven.org/maven2/" }
+        maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
+        mavenCentral()
+        maven { url 'https://jitpack.io' }
     }
 }
 
@@ -29,7 +33,10 @@ task clean(type: Delete) {
 
 // Define versions in a single place
 ext {
+    supportLibVersion = '25.3.1'
+    utilsVersion = '1.0.3'
     rxjava2Version = '2.0.6'
     rxandroidVersion = '2.0.1'
     butterknifeVersion = '8.4.0'
+    gsonVersion = '2.4'
 }
