--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,3 @@
-include ':app', ':sxframework', ':WeexSDK', ':sxdebugkit', ':service', ':ioc-processor', ':ioc',
+include ':app', ':sxframework', ':WeexSDK', ':sxdebugkit', ':service', ':ioc-processor', ':ioc', ':hook-sample',
         ':ioc-annotation', ':rxjavademo', ':crawler', ':mvpcrawler', 'android-utils', 'tencent-sonic',
         'DroidPlugin'
