--- a/app/build.gradle
+++ b/app/build.gradle
@@ -161,15 +161,14 @@ dependencies {
     compile 'com.github.ismaeltoe:flowlayout:1.0'
     compile 'com.google.code.gson:gson:2.4'
     compile 'com.alibaba:fastjson:1.1.46.android'
+    compile 'com.google.guava:guava:23.0-android'
     //    compile 'com.taobao.android:weex_sdk:0.10.0@aar'
     compile 'com.amap.api:location:3.3.0'
     compile 'com.github.anrwatchdog:anrwatchdog:1.3.0'
+    compile 'com.umeng.analytics:analytics:latest.integration'
     //    compile 'com.dodola:rocoo:1.1'
     //    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'junit:junit:4.12'
-    //    compile 'com.android.support.test.espresso:espresso-core:2.2.2', {
-    //        exclude group: 'com.android.support', module: 'support-annotations'
-    //    }
     //    compile 'com.qiniu:qiniu-android-sdk:7.2.+'
     //    compile 'org.greenrobot:eventbus:3.0.0'
     apt 'org.greenrobot:eventbus-annotation-processor:3.0.1'
