--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,9 @@ ext {
     rxandroidVersion = '2.0.1'
     butterknifeVersion = '8.4.0'
     gsonVersion = '2.4'
+
     compileSdkVersion = 25
     buildToolsVersion = "25.0.2"
+    minSdkVersion = 16
+    targetSdkVersion = 25
 }
