--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,3 @@
 include ':app', ':sxframework', ':WeexSDK', ':sxdebugkit', ':service', ':ioc-processor', ':ioc', ':hook-sample', ':hotfix-sample',
-        ':ioc-annotation', ':rxjavademo', ':crawler', ':mvpcrawler', 'android-utils', 'tencent-sonic',
+        ':ioc-annotation', ':rxjavademo', ':crawler', ':mvpcrawler', 'android-utils',
         'DroidPlugin'
