--- a/hook-sample/build.gradle
+++ b/hook-sample/build.gradle
@@ -45,5 +45,6 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:25.3.1'
     testCompile 'junit:junit:4.12'
-    compile project(path: ':android-utils')
+    compile 'com.github.shixinzhang:android-utils:1.0.4'
+//    compile project(path: ':android-utils')
 }
